View Issue Details

IDProjectCategoryView StatusLast Update
0026027Open CASCADEOCCT:Visualizationpublic2015-05-14 16:34
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version6.9.0Fixed in Version6.9.0 
Summary0026027: Visualization, AIS_TexturedShape - back face culling option should not be overridden by texturing aspect
DescriptionAIS_TexturedShape::updateAttributes() overrides fill area aspects using wrong parameters for back face culling.
Steps To ReproduceTest case bugs/vis/bug5988 and several others.
TagsNo tags attached.
Test case numberbugs vis(004) bug5988

Relationships

related to 0025656 closedbugmaster Specification of semantic of Closed flag of an edge 
related to 0024672 closedabv Visualization - AIS_TexturedShape does not activate back face culling aspect 

Activities

git

2015-04-07 12:12

administrator   ~0039294

Branch CR26027 has been created by kgv.

SHA-1: ba4c149a627887b3f7743455e06429497c213c31


Detailed log of new commits:

Author: kgv
Date: Tue Apr 7 12:11:57 2015 +0300

    0026027: Visualization, AIS_TexturedShape - back face culling option should not be overridden by texturing aspect

kgv

2015-04-07 12:12

developer   ~0039295

Patch is ready for review.

git

2015-04-07 12:17

administrator   ~0039297

Branch CR26027 has been updated forcibly by kgv.

SHA-1: 2ff7c70f605b6815625019224aacc90f4cd5ab70

san

2015-04-07 16:40

developer   ~0039322

Branch CR26027 reviewed without remarks, ready for testing.

git

2015-04-08 19:14

administrator   ~0039395

Branch CR26027 has been updated forcibly by apv.

SHA-1: abe9b5b241edec4e8670272f8f7d7cc98f8afbc6

apv

2015-04-08 19:15

tester   ~0039397

Branch CR26027 has been rebased on the current master

apv

2015-04-10 17:40

tester   ~0039605

Last edited: 2015-04-10 17:40

Dear BugMaster,

Branch CR26027 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: abe9b5b241edec4e8670272f8f7d7cc98f8afbc6

Number of compiler warnings:
occt component:
   Linux: 18 (18 on master)
   Windows: 0 (0 on master)
products component:
   Linux: 4 (4 on master)
   Windows: 0 (0 on master)

Regressions/Differences:
Not detected

Testing on Linux:
Total MEMORY difference: 93580933 / 93952804 [-0.40%]
Total CPU difference: 53204.699999999546 / 52005.539999999615 [+2.31%]

Testing on Windows:
Total MEMORY difference: 57065537 / 57074762 [-0.02%]
Total CPU difference: 16394.51949239888 / 16635.463036899022 [-1.45%]

git

2015-05-14 16:34

administrator   ~0041068

Branch CR26027 has been deleted by inv.

SHA-1: abe9b5b241edec4e8670272f8f7d7cc98f8afbc6

Related Changesets

occt: master 124ee9c9

2015-04-07 09:17:25

kgv


Committer: bugmaster Details Diff
0026027: Visualization, AIS_TexturedShape - back face culling option should not be overridden by texturing aspect Affected Issues
0026027
mod - src/AIS/AIS_TexturedShape.cxx Diff File

Issue History

Date Modified Username Field Change
2015-04-07 11:56 kgv New Issue
2015-04-07 11:56 kgv Assigned To => kgv
2015-04-07 12:09 kgv Status new => assigned
2015-04-07 12:12 git Note Added: 0039294
2015-04-07 12:12 kgv Note Added: 0039295
2015-04-07 12:12 kgv Assigned To kgv => san
2015-04-07 12:12 kgv Status assigned => resolved
2015-04-07 12:17 git Note Added: 0039297
2015-04-07 12:31 kgv Relationship added related to 0025656
2015-04-07 12:36 kgv Relationship added related to 0024672
2015-04-07 16:40 san Note Added: 0039322
2015-04-07 16:40 san Assigned To san => bugmaster
2015-04-07 16:40 san Status resolved => reviewed
2015-04-08 17:09 apv Assigned To bugmaster => apv
2015-04-08 19:14 git Note Added: 0039395
2015-04-08 19:15 apv Note Added: 0039397
2015-04-10 16:46 apv Test case number => bugs vis(004) bug5988
2015-04-10 17:40 apv Note Added: 0039605
2015-04-10 17:40 apv Assigned To apv => bugmaster
2015-04-10 17:40 apv Status reviewed => tested
2015-04-10 17:40 apv Note Edited: 0039605
2015-04-17 15:40 bugmaster Changeset attached => occt master 124ee9c9
2015-04-17 15:40 bugmaster Status tested => verified
2015-04-17 15:40 bugmaster Resolution open => fixed
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:31 aiv Fixed in Version => 6.9.0
2015-05-14 16:34 git Note Added: 0041068