0026027: Visualization, AIS_TexturedShape - back face culling option should not be overridden by texturing aspect